MDEV-37378 SIGSEGV or Assertion failed on CREATE TRIGGER

SIGSEGV in MDL_ticket::has_stronger_or_equal_type and
Assertion `!table->s->tmp_table' failed in wait_while_table_is_used on
CREATE TRIGGER.

Forbid using triggers with Global temporary tables.